# agentic-asr

./: .dockerignore  .gitignore  BACKEND_DEPLOYMENT.md  Dockerfile  README.md  asset-manifest.json  compare_rerankers.py  docker-compose.yml  index.html  manifest.json  nixpacks.toml  pyproject.toml  railway-requirements.txt  railway.json  requirements.txt  research.ipynb  setup.py  simple_transcription_validator.py
.github/workflows/: deploy.yml
agentic_asr/: __init__.py  cli.py  config.py  rerankers.py  vector_store.py
agentic_asr/asr/: __init__.py  transcriber.py
agentic_asr/core/: agent.py  events.py  history.py  models.py  token_manager.py  tools.py
agentic_asr/llm/: __init__.py  providers.py
agentic_asr/tools/: __init__.py  enhanced.py  tool_validators.py
agentic_asr/utils/: __init__.py  logging.py
api/: __init__.py  main.py  requirements.txt
frontend/: .env.local  .env.production  DEPLOYMENT.md  README.md  package-lock.json  package.json  setup.sh
frontend/public/: 404.html  index.html
frontend/src/: App.tsx  index.css
frontend/src/components/: MarkdownRenderer.tsx  Navbar.tsx
frontend/src/pages/: Analysis.tsx  Chat.tsx  Dashboard.tsx  MarkdownDemo.tsx  Sessions.tsx  SummariesAndTranslations.tsx  Transcriptions.tsx
frontend/src/services/: api.ts
research/: ArmenianTranscriber.ipynb  ArmenianTranscriber_master.ipynb
scripts/: README.md  data_source.py
static/css/: main.23958e20.css  main.23958e20.css.map
static/js/: main.07efa583.js  main.07efa583.js.map
